EPMRPP-40466 Fixed visibility Remove photo button

--- a/app/src/pages/inside/profilePage/personalInfoBlock/photoControls/photoControls.scss
+++ b/app/src/pages/inside/profilePage/personalInfoBlock/photoControls/photoControls.scss
@@ -30,6 +30,10 @@
   font-family: $FONT-REGULAR;
   cursor: pointer;
   outline: none;
+
+  &.hint {
+    display: none;
+  }
 }
 .photo-controls {
   position: relative;
